[project]
name = "dino-roar"
version = "0.0.1"
description = "Status update announcement bot for Dino Jump - Spark Design Club project"
readme = "README.md"

dependencies = [
  'discord',
  'python-dotenv',
  'requests',
  'bs4',
  'google-generativeai==0.8.2',
  'grpcio-status==1.67.0',
  'protobuf>=5.26.1,<6.0dev',
]

[build-system]
requires = [
  "setuptools>=43.0.0",
  "wheel"
]
build-backend = "setuptools.build_meta"
python_requires = ">=3.9"
